@@ -1,0 +1,20 @@
+#!/bin/bash
+#\
+#
+# THIS FILE IS GENERATED FROM wacomcpl.in.
+# Please make all changes to the original source file.
+#
+# Actual code is contained in wacomcpl-exec.
+#
+# Setup TCL Library Path to include WACOMXI installed directory.
+# Alternatively, you can set this in your Tcl configuration yourself.
+#
+# JEJ - The TCLLIBPATH appears to be a Tcl list; I tried nested lists
+#       (eg. [list [list foo] bar]) and it seems to work as expected.
+#       Trailing space seems to be necessary.
+#
+WACOMXI_BINDIR=@WCM_WACOMXI_BINDIR@
+WACOMXI_LIBDIR=@WCM_WACOMXI_LIBDIR@
+export TCLLIBPATH="[list $TCLLIBPATH $WACOMXI_LIBDIR ]"
+echo "wacomcpl: using TCLLIBPATH=\"$TCLLIBPATH\""
+$WACOMXI_BINDIR/wacomcpl-exec
