@@ -71,9 +71,10 @@
  * 2003-05-01 26-j0.5.12 - changed graphire wheel to report relative
  * 2003-05-02 26-j0.5.13 - added parameter configuration code
  * 2003-05-15 26-j0.5.14 - added relative wheel button 4 and 5
+ * 2003-05-15 26-j0.5.15 - reapplying intuos filter code
  */
 
-static const char identification[] = "$Identification: 26-j0.5.14 $";
+static const char identification[] = "$Identification: 26-j0.5.15 $";
 
 /****************************************************************************/
 
