@@ -1,3 +1,13 @@
+2003-06-14    John E. Joganic <john@joganic.com>
+
+	* Fixed wacomcpl/wacomxi to run on systems with tcl and tk installed
+	* Moved wacomxi into subdirectory
+	* Modified checks for tcl and tk to search include and library paths
+	* Applied conditional build and install to wacomxi
+	* Modified wacomcpl to install and run regardless of install prefix
+	* Added Intuos filter code back into data path
+	* Nixed Graphire filter code because suppression code does same thing
+
 2003-06-03    Ping Cheng <pingc@wacom.com>
 	* Added calibration tool and made it install as default
 	* Added gimp option for calibration
